<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scv_login_scroll"
    android:scrollbars="none">

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="vertical"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <ImageView
                android:layout_width="75dp"
                android:layout_height="110dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:contentDescription="@string/ETWLoginLogo"
                android:descendantFocusability="beforeDescendants"
                android:focusableInTouchMode="true"
                android:src="@drawable/login_logo" />


            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_login_companyId"
                style="@style/inputTextLayout"
                android:layout_marginTop="40dp">

                <EditText
                    android:id="@+id/edt_login_companyId"
                    style="@style/edtiText"
                    android:drawableRight="@drawable/ic_location"
                    android:hint="@string/companyId"
                    android:imeOptions="actionNext"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_login_username"
                style="@style/inputTextLayout">

                <EditText
                    android:id="@+id/edt_login_username"
                    style="@style/edtiText"
                    android:drawableRight="@drawable/ic_person"
                    android:hint="@string/username"
                    android:imeOptions="actionNext" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_login_password"
                style="@style/inputTextLayout">

                <EditText
                    android:id="@+id/edt_login_password"
                    style="@style/edtiText"
                    android:drawableRight="@drawable/ic_lock"
                    android:hint="@string/password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/chk_login_touchId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/useTouchId"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_login_signin"
                style="@style/button"
                android:text="@string/signIn" />

            <TextView
                android:id="@+id/txt_forgot_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="20dp"
                android:text="@string/forgotLoginInfo"
                android:textColor="@color/cornflowerBlue"
                android:textSize="18sp" />


        </LinearLayout>

                <include
                    android:id="@+id/vw_login_progressbar"
                    layout="@layout/view_progressbar"
                    android:visibility="gone" />

        <include layout="@layout/layout_validation_recycler_view" />

    </FrameLayout>

</ScrollView>
